Feat/3hSAaIUh: API MapPointer
